# ftg-dashboard

./: .gitignore  .replit  netlify.toml  pyproject.toml  replit.md  wsgi.py
attached_assets/: Pasted--DEBUG-verify-session-response-success-true-user-displa_1766532407125.txt  Pasted--workspace-git-status-On-branch-main-Your-branch-and-or_1766775160672.txt  Pasted-I-want-to-add-a-fully-functional-Income-Statement-page-_1765404793691.txt  Pasted-I-want-to-add-a-new-Account-View-page-to-my-FTG-dashboa_1765396102456.txt  Pasted-Key-Observations-Revenue-Decline-Revenue-decreased-by-2_1765494051330.txt  Pasted-Key-Observations-Revenue-Growth-Revenue-has-shown-subst_1765494797977.txt  Pasted-Key-Observations-Revenue-Growth-Revenue-increased-signi_1765493571689.txt  Pasted-Key-Observations-Revenue-Growth-Revenue-more-than-doubl_1765493843889.txt  Pasted-Key-Observations-Revenue-Growth-The-company-experienced_1765493041570.txt  Pasted-Key-Observations-Revenue-Growth-There-is-a-steady-incre_1765493409954.txt  Pasted-Key-Observations-Strong-Revenue-Growth-Revenue-has-incr_1765493991809.txt  Pasted-SW-registered-https-ftg-dashboard-replit-app-2dashboard_1766680901955.txt  Pasted-what-is-the-current-backlog-amount-The-current-total-ba_1766702249017.txt
netlify/functions/: analyze-income-statement.js  cash-data.js
public/: dashboard.js  index.html  manifest.json  metrics_etl.py  netlify.toml  server.py  style.css  sw-v5.js  sw-v6.js  sw.js
public/data/: account_groups.json  ar_invoices.json  financials.json  financials_gl.json
public/netlify/functions/: analyze-account.js  (+8 more)
