[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "pillow>=12.0.0",
    "requests>=2.32.5",
]
